--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//javaTester/javaBasic/Topic_07_Array.java=UTF-8
+encoding//javaTester/javaBasic/Topic_08_String.java=UTF-8
