--- a/.classpath
+++ b/.classpath
@@ -26,6 +26,6 @@
 	<classpathentry kind="lib" path="libWebDriverManager/jarchivelib-1.0.0.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/jsoup-1.13.1.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/slf4j-api-1.7.30.jar"/>
-	<classpathentry kind="lib" path="libWebDriverManager/webdrivermanager-4.2.0.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManager/webdrivermanager-4.2.0.jar" sourcepath="libWebDriverManager/webdrivermanager-4.2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
