--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -8,3 +8,4 @@ encoding//testcases/com/nopcommerce/user/Level_02_User_01_Register_Login_Use_Bas
 encoding//testcases/com/nopcommerce/user/Level_03_User_01_Register_Use_Page_Obj.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_03_User_02_Login_Use_Page_Obj.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_04_Multi_Browser.java=UTF-8
+encoding//testcases/com/nopcommerce/user/Level_05_Page_Factory.java=UTF-8
