--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -10,3 +10,4 @@ encoding//testcases/com/nopcommerce/user/Level_03_User_01_Register_Use_Page_Obj.
 encoding//testcases/com/nopcommerce/user/Level_03_User_02_Login_Use_Page_Obj.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_04_Multi_Browser.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_05_Page_Factory.java=UTF-8
+encoding//testcases/com/nopcommerce/user/Level_06_Page_Generetor_Manager.java=UTF-8
