--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -12,3 +12,4 @@ encoding//testcases/com/nopcommerce/user/Level_04_Multi_Browser.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_05_Page_Factory.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_06_Page_Generetor_Manager.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_07_Switch_Page.java=UTF-8
+encoding//testcases/com/nopcommerce/user/Level_08_Switch_Role.java=UTF-8
