--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding//actions/common/BasePage.java=UTF-8
 encoding//actions/common/BasePageFactory.java=UTF-8
 encoding//actions/common/BaseTest.java=UTF-8
+encoding//actions/common/GlobalConstants.java=UTF-8
 encoding//javaTester/javaBasic/Topic_07_Array.java=UTF-8
 encoding//javaTester/javaBasic/Topic_08_String.java=UTF-8
 encoding//javaTester/javaBasic/Topic_09_String_Format.java=UTF-8
