--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -10,6 +10,7 @@ encoding//actions/commonJquery/BasePageJquery.java=UTF-8
 encoding//actions/commonJquery/BaseTestJquery.java=UTF-8
 encoding//actions/commonJquery/GlobalConstants.java=UTF-8
 encoding//actions/pageObjJquery/HomePageObj.java=UTF-8
+encoding//interfaces/pageUI/Jquery/HomePageUI.java=UTF-8
 encoding//javaTester/javaBasic/Topic_07_Array.java=UTF-8
 encoding//javaTester/javaBasic/Topic_08_String.java=UTF-8
 encoding//javaTester/javaBasic/Topic_09_String_Format.java=UTF-8
