--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -29,3 +29,4 @@ encoding//testcases/com/nopcommerce/user/Level_06_Page_Generetor_Manager.java=UT
 encoding//testcases/com/nopcommerce/user/Level_07_Switch_Page.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_08_Switch_Role.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_09_Dynamic_Locator.java=UTF-8
+encoding//testcases/com/nopcommerce/user/Level_12_Assert_Verify.java=UTF-8
