--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -17,6 +17,7 @@ encoding//javaTester/javaBasic/Topic_07_Array.java=UTF-8
 encoding//javaTester/javaBasic/Topic_08_String.java=UTF-8
 encoding//javaTester/javaBasic/Topic_09_String_Format.java=UTF-8
 encoding//javaTester/javaOOP/Topic_01_Non_Access_Modifier.java=UTF-8
+encoding//testcases/com/facebook/register/Level_13_Element_Undisplayed.java=UTF-8
 encoding//testcases/com/jquery/datatable/Level_10_DataTable_DataGrid.java=UTF-8
 encoding//testcases/com/jquery/datatable/Level_11_Upload_Files.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_02_User_01_Register_Login_Use_BaseTest_II.java=UTF-8
