--- a/.classpath
+++ b/.classpath
@@ -27,15 +27,12 @@
 	<classpathentry kind="lib" path="libWebDriverManager/jsoup-1.13.1.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/slf4j-api-1.7.30.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/webdrivermanager-4.2.0.jar" sourcepath="libWebDriverManager/webdrivermanager-4.2.0.jar"/>
-	<classpathentry kind="lib" path="library/commons-codec-1.11.jar"/>
-	<classpathentry kind="lib" path="library/commons-io-2.6.jar"/>
-	<classpathentry kind="lib" path="library/commons-lang3-3.8.1.jar"/>
-	<classpathentry kind="lib" path="library/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="library/log4j-1.2.16.jar"/>
-	<classpathentry kind="lib" path="libLog4J/commons-codec-1.11.jar"/>
-	<classpathentry kind="lib" path="libLog4J/commons-io-2.6.jar"/>
 	<classpathentry kind="lib" path="libLog4J/commons-lang3-3.8.1.jar"/>
 	<classpathentry kind="lib" path="libLog4J/commons-logging-1.2.jar"/>
 	<classpathentry kind="lib" path="libLog4J/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="libReportNG/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="libReportNG/guice-3.0.jar"/>
+	<classpathentry kind="lib" path="libReportNG/reportng-1.1.4.jar"/>
+	<classpathentry kind="lib" path="libReportNG/velocity-1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
