--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -32,3 +32,4 @@ encoding//testcases/com/nopcommerce/user/Level_08_Switch_Role.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_09_Dynamic_Locator.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_12_Assert_Verify.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_14_Log_ReportNG.java=UTF-8
+encoding//testcases/com/nopcommerce/user/Level_15_ReportNG_Screenshot.java=UTF-8
