--- a/.classpath
+++ b/.classpath
@@ -34,5 +34,10 @@
 	<classpathentry kind="lib" path="libReportNG/guice-3.0.jar"/>
 	<classpathentry kind="lib" path="libReportNG/reportng-1.1.4.jar"/>
 	<classpathentry kind="lib" path="libReportNG/velocity-1.4.jar"/>
+	<classpathentry kind="lib" path="libExtentV2/bson-3.0.4.jar"/>
+	<classpathentry kind="lib" path="libExtentV2/extentreports-2.41.2.jar"/>
+	<classpathentry kind="lib" path="libExtentV2/freemarker-2.3.23.jar"/>
+	<classpathentry kind="lib" path="libExtentV2/mongodb-driver-3.0.4.jar"/>
+	<classpathentry kind="lib" path="libExtentV2/mongodb-driver-core-3.0.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
