--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -34,3 +34,4 @@ encoding//testcases/com/nopcommerce/user/Level_12_Assert_Verify.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_14_Log_ReportNG.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_15_ReportNG_Screenshot.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_16_ExtentV2_Screenshot.java=UTF-8
+encoding//testcases/com/nopcommerce/user/Level_17_ExtentV3_Screenshot.java=UTF-8
