--- a/.classpath
+++ b/.classpath
@@ -24,7 +24,6 @@
 	<classpathentry kind="lib" path="libWebDriverManager/httpclient5-5.0.1.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/httpcore5-5.0.1.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/jarchivelib-1.0.0.jar"/>
-	<classpathentry kind="lib" path="libWebDriverManager/jsoup-1.13.1.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/slf4j-api-1.7.30.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/webdrivermanager-4.2.0.jar" sourcepath="libWebDriverManager/webdrivermanager-4.2.0.jar"/>
 	<classpathentry kind="lib" path="libLog4J/commons-lang3-3.8.1.jar"/>
@@ -34,10 +33,16 @@
 	<classpathentry kind="lib" path="libReportNG/guice-3.0.jar"/>
 	<classpathentry kind="lib" path="libReportNG/reportng-1.1.4.jar"/>
 	<classpathentry kind="lib" path="libReportNG/velocity-1.4.jar"/>
-	<classpathentry kind="lib" path="libExtentV2/bson-3.0.4.jar"/>
-	<classpathentry kind="lib" path="libExtentV2/extentreports-2.41.2.jar"/>
-	<classpathentry kind="lib" path="libExtentV2/freemarker-2.3.23.jar"/>
-	<classpathentry kind="lib" path="libExtentV2/mongodb-driver-3.0.4.jar"/>
-	<classpathentry kind="lib" path="libExtentV2/mongodb-driver-core-3.0.4.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManager/jsoup-1.13.1.jar"/>
+	<classpathentry kind="lib" path="libExtentV3/bsh-2.0b4.jar"/>
+	<classpathentry kind="lib" path="libExtentV3/bson-3.3.0.jar"/>
+	<classpathentry kind="lib" path="libExtentV3/extentreports-3.1.5.jar"/>
+	<classpathentry kind="lib" path="libExtentV3/freemarker-2.3.23.jar"/>
+	<classpathentry kind="lib" path="libExtentV3/httpclient-4.5.2.jar"/>
+	<classpathentry kind="lib" path="libExtentV3/httpcore-4.4.4.jar"/>
+	<classpathentry kind="lib" path="libExtentV3/httpmime-4.5.2.jar"/>
+	<classpathentry kind="lib" path="libExtentV3/jcommander-1.48.jar"/>
+	<classpathentry kind="lib" path="libExtentV3/mongodb-driver-3.3.0.jar"/>
+	<classpathentry kind="lib" path="libExtentV3/mongodb-driver-core-3.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
