--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -35,3 +35,4 @@ encoding//testcases/com/nopcommerce/user/Level_14_Log_ReportNG.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_15_ReportNG_Screenshot.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_16_ExtentV2_Screenshot.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_17_ExtentV3_Screenshot.java=UTF-8
+encoding//testcases/com/nopcommerce/user/Level_18_Allure.java=UTF-8
