--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -20,6 +20,8 @@ encoding//javaTester/javaOOP/Topic_01_Non_Access_Modifier.java=UTF-8
 encoding//testcases/com/facebook/register/Level_13_Element_Undisplayed.java=UTF-8
 encoding//testcases/com/jquery/datatable/Level_10_DataTable_DataGrid.java=UTF-8
 encoding//testcases/com/jquery/datatable/Level_11_Upload_Files.java=UTF-8
+encoding//testcases/com/nopcommerce/common/Common_01_Cookies.java=UTF-8
+encoding//testcases/com/nopcommerce/common/Common_01_Register_End_User.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_02_User_01_Register_Login_Use_BaseTest_II.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_02_User_01_Register_Login_Use_BaseTest_III.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_03_User_01_Register_Use_Page_Obj.java=UTF-8
@@ -36,3 +38,6 @@ encoding//testcases/com/nopcommerce/user/Level_15_ReportNG_Screenshot.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_16_ExtentV2_Screenshot.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_17_ExtentV3_Screenshot.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_18_Allure.java=UTF-8
+encoding//testcases/com/nopcommerce/user/Level_19_Share_Data_A.java=UTF-8
+encoding//testcases/com/nopcommerce/user/Level_19_Share_Data_B.java=UTF-8
+encoding//testcases/com/nopcommerce/user/Level_19_Share_Data_C.java=UTF-8
