--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -41,3 +41,4 @@ encoding//testcases/com/nopcommerce/user/Level_18_Allure.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_19_Share_Data_A.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_19_Share_Data_B.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_19_Share_Data_C.java=UTF-8
+encoding//testcases/com/nopcommerce/user/Level_20_Custom_Close_Driver.java=UTF-8
