--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -42,3 +42,4 @@ encoding//testcases/com/nopcommerce/user/Level_19_Share_Data_A.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_19_Share_Data_B.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_19_Share_Data_C.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_20_Custom_Close_Driver.java=UTF-8
+encoding//testcases/com/nopcommerce/user/Level_21_Pattern_Object.java=UTF-8
