--- a/.classpath
+++ b/.classpath
@@ -14,7 +14,7 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="library/testng-6.14.3-sources.jar"/>
 	<classpathentry kind="lib" path="library/testng-6.14.3.jar"/>
-	<classpathentry kind="lib" path="library/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="lib" path="library/selenium-server-standalone-3.141.59.jar" sourcepath="libWebDriverManager/webdrivermanager-4.2.0.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/commons-codec-1.13.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/commons-collections4-4.3.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/commons-compress-1.20.jar"/>
