--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -11,6 +11,7 @@ encoding//actions/commonJquery/BaseTestJquery.java=UTF-8
 encoding//actions/commonJquery/GlobalConstants.java=UTF-8
 encoding//actions/pageObjJquery/HomePageObj.java=UTF-8
 encoding//actions/pageObjUploadFiles/HomePageObj.java=UTF-8
+encoding//actions/pageObject/sauceLab/ProductPageObj.java=UTF-8
 encoding//interfaces/pageUI/Jquery/HomePageUI.java=UTF-8
 encoding//interfaces/pageUI/Upload/HomePageUIUploadFiles.java=UTF-8
 encoding//javaTester/javaBasic/Topic_07_Array.java=UTF-8
