--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -17,6 +17,7 @@ encoding//interfaces/pageUI/Upload/HomePageUIUploadFiles.java=UTF-8
 encoding//javaTester/javaBasic/Topic_07_Array.java=UTF-8
 encoding//javaTester/javaBasic/Topic_08_String.java=UTF-8
 encoding//javaTester/javaBasic/Topic_09_String_Format.java=UTF-8
+encoding//javaTester/javaBasic/Topic_10_Random_Java.java=UTF-8
 encoding//javaTester/javaOOP/Topic_01_Non_Access_Modifier.java=UTF-8
 encoding//testcases/com/facebook/register/Level_13_Element_Undisplayed.java=UTF-8
 encoding//testcases/com/jquery/datatable/Level_10_DataTable_DataGrid.java=UTF-8
