--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -18,6 +18,7 @@ encoding//javaTester/javaBasic/Topic_07_Array.java=UTF-8
 encoding//javaTester/javaBasic/Topic_08_String.java=UTF-8
 encoding//javaTester/javaBasic/Topic_09_String_Format.java=UTF-8
 encoding//javaTester/javaBasic/Topic_10_Random_Java.java=UTF-8
+encoding//javaTester/javaBasic/Topic_11_Faker.java=UTF-8
 encoding//javaTester/javaOOP/Topic_01_Non_Access_Modifier.java=UTF-8
 encoding//testcases/com/facebook/register/Level_13_Element_Undisplayed.java=UTF-8
 encoding//testcases/com/jquery/datatable/Level_10_DataTable_DataGrid.java=UTF-8
@@ -45,4 +46,5 @@ encoding//testcases/com/nopcommerce/user/Level_19_Share_Data_B.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_19_Share_Data_C.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_20_Custom_Close_Driver.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_21_Pattern_Object.java=UTF-8
+encoding//testcases/com/nopcommerce/user/Level_23_Fake_Data.java=UTF-8
 encoding//testcases/com/saucelab/sort/Level_22_Sort_Asc_Desc.java=UTF-8
