--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -47,4 +47,6 @@ encoding//testcases/com/nopcommerce/user/Level_19_Share_Data_C.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_20_Custom_Close_Driver.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_21_Pattern_Object.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_23_Fake_Data.java=UTF-8
+encoding//testcases/com/nopcommerce/user/Level_24_Multiple_Enviroment_Owner.java=UTF-8
+encoding//testcases/com/nopcommerce/user/Level_24_Multiple_Enviroment_TestNG.java=UTF-8
 encoding//testcases/com/saucelab/sort/Level_22_Sort_Asc_Desc.java=UTF-8
