--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -10,6 +10,7 @@ encoding//actions/commonJquery/BasePageJquery.java=UTF-8
 encoding//actions/commonJquery/BaseTestJquery.java=UTF-8
 encoding//actions/commonJquery/GlobalConstants.java=UTF-8
 encoding//actions/jdbctest/MySQLConnUtils.java=UTF-8
+encoding//actions/jdbctest/MySQLTestConnection.java=UTF-8
 encoding//actions/pageObjJquery/HomePageObj.java=UTF-8
 encoding//actions/pageObjUploadFiles/HomePageObj.java=UTF-8
 encoding//actions/pageObject/sauceLab/ProductPageObj.java=UTF-8
