--- a/.classpath
+++ b/.classpath
@@ -69,5 +69,6 @@
 	<classpathentry kind="lib" path="libOwner/owner-1.0.10.jar"/>
 	<classpathentry kind="lib" path="libJDBC/mssql-jdbc-9.4.1.jre11.jar"/>
 	<classpathentry kind="lib" path="libJDBC/mysql-connector-java-8.0.28.jar"/>
+	<classpathentry kind="lib" path="libJDBC/jtds-1.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
