--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -50,3 +50,4 @@ encoding//testcases/com/nopcommerce/user/Level_23_Fake_Data.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_24_Multiple_Enviroment_Owner.java=UTF-8
 encoding//testcases/com/nopcommerce/user/Level_24_Multiple_Enviroment_TestNG.java=UTF-8
 encoding//testcases/com/saucelab/sort/Level_22_Sort_Asc_Desc.java=UTF-8
+encoding//testcases/com/wordpress/posts/Post_01_Create_Read_Update_Delete.java=UTF-8
