--- a/.classpath
+++ b/.classpath
@@ -70,5 +70,6 @@
 	<classpathentry kind="lib" path="libJDBC/mssql-jdbc-9.4.1.jre11.jar"/>
 	<classpathentry kind="lib" path="libJDBC/mysql-connector-java-8.0.28.jar"/>
 	<classpathentry kind="lib" path="libJDBC/jtds-1.3.1.jar"/>
+	<classpathentry kind="lib" path="library/joda-time-2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
