--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -18,6 +18,13 @@ encoding//actions/jdbctest/SQLTestConnection.java=UTF-8
 encoding//actions/pageObjJquery/HomePageObj.java=UTF-8
 encoding//actions/pageObjUploadFiles/HomePageObj.java=UTF-8
 encoding//actions/pageObject/sauceLab/ProductPageObj.java=UTF-8
+encoding//actions/pageObjects/wordpress/AdminUserPO.java=UTF-8
+encoding//actions/utilities/MySQLConnUtils.java=UTF-8
+encoding//actions/utilities/MySQLTestConnection.java=UTF-8
+encoding//actions/utilities/SQLServerConnUtils.java=UTF-8
+encoding//actions/utilities/SQLServerJTDSConnUtils.java=UTF-8
+encoding//actions/utilities/SQLServerJTDSTestConnection.java=UTF-8
+encoding//actions/utilities/SQLTestConnection.java=UTF-8
 encoding//interfaces/pageUI/Jquery/HomePageUI.java=UTF-8
 encoding//interfaces/pageUI/Upload/HomePageUIUploadFiles.java=UTF-8
 encoding//testcases/com/facebook/register/Level_13_Element_Undisplayed.java=UTF-8
@@ -51,3 +58,4 @@ encoding//testcases/com/nopcommerce/user/Level_24_Multiple_Enviroment_Owner.java
 encoding//testcases/com/nopcommerce/user/Level_24_Multiple_Enviroment_TestNG.java=UTF-8
 encoding//testcases/com/saucelab/sort/Level_22_Sort_Asc_Desc.java=UTF-8
 encoding//testcases/com/wordpress/posts/Post_01_Create_Read_Update_Delete.java=UTF-8
+encoding//testcases/com/wordpress/posts/User_01_View_User.java=UTF-8
